<resources>
    <string name="app_name">鲁科压力管道评级软件</string>
    <string name="comp_name">济宁鲁科检测器材有限公司</string>
    <string name="comp_phone">联系电话：0537-6588260</string>
    <string name="activition_code">获取激活码</string>
    <string name="title_tips">提示</string>
    <string name="title_tips_confim">确定</string>
    <string name="title_tips_cancel">取消</string>
    <string name="copy">复制</string>
    <string name="title_activity_select">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="straight_pipe">直管/弯头耐压强度校核</string>
    <string name="elbow_pipe">弯头的耐压强度校核</string>


    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="work_list">定检项</string>
    <string name="write_slave_code">请输入激活码</string>


    <string name="land_leave">壁厚评级</string>
    <string name="local_penetration">局部减薄评级</string>
    <!--    <string name="local_thinning">局部减薄评级</string>-->

    <string name="pressure_leave">耐压强度</string>
    <string name="straight">耐压强度评级</string>
    <string name="elbow">弯头评级</string>

    <string name="welding_leave">焊接评级</string>
    <string name="circular_line">焊接缺陷评级</string>
    <string name="circular_line1">焊接缺陷评级\n(圆形缺陷、条形缺陷)</string>
    <string name="line">条形评级</string>

    <string name="weld_other">咬边/错边/未熔合评级</string>
    <string name="weld_other1">焊接缺陷评级\n(咬边、错边、未熔合)</string>

    <string name="no_influence">不影响定级</string>
    <string name="influence">按局部减薄定级</string>

    <string name="two_leave">2级</string>
    <string name="there_leave">3级</string>
    <string name="four_leave">4级</string>

    <string name="in_project">进入程序</string>
    <string name="leavecode_error">激活码错误</string>
    circular
</resources>