<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityCode">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayoutHeader"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/color_bg_selected">

            <TextView
                android:id="@+id/tv_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/activition_code"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvCode"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:background="@drawable/linelayout_radion"
            android:textColor="@android:color/black"
            android:padding="5dp"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:textIsSelectable="true"/>

        <Button
            android:id="@+id/btnCopy"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/pxqbutton_select"
            android:text="@string/copy"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etCode"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="65dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1.5"
            android:padding="5dp"
            android:background="@drawable/linelayout_radion"
            android:gravity="top|left"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/pxqbutton_select"
            android:text="@string/title_tips_confim"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>