<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/theme_back_color">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/comp_name"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
    </RelativeLayout>

    <com.youth.banner.Banner
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:banner_indicator_selected_color="@color/red" />


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/white"
                android:orientation="horizontal">

            <ImageView
                    android:layout_width="4dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:background="@color/color_selected" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/work_list"
                    android:textColor="@color/theme_color"
                    android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:orientation="vertical"
                android:layout_marginBottom="15dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                <LinearLayout
                        android:id="@+id/linPenetration"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/pxqbutton_select"
                        android:orientation="vertical">

                    <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/ic_penetration"
                            android:layout_marginTop="20dp"
                            android:layout_gravity="center_horizontal"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/local_penetration"
                            android:gravity="center"
                            android:layout_marginTop="15dp"
                            android:textColor="#A85324"
                            android:textSize="16dp"/>
                </LinearLayout>

                <LinearLayout
                        android:id="@+id/linCircularOrStrip"
                        android:layout_width="0dp"
                        android:layout_marginLeft="5dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:background="#020929"
                        android:orientation="vertical">

                    <ImageView
                            android:layout_width="85dp"
                            android:layout_height="85dp"
                            android:src="@drawable/ic_circularorstrip"
                            android:layout_marginTop="30dp"
                            android:layout_gravity="center_horizontal"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/circular_line1"
                            android:gravity="center"
                            android:textColor="#D81E06"
                            android:layout_marginTop="20dp"
                            android:textSize="16dp"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">
<!--//#020929-->
                <LinearLayout
                        android:id="@+id/linStraightOrElbow"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:layout_marginRight="5dp"
                        android:background="@color/darkslateblue"
                        android:orientation="vertical">

                    <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/ic_straightorelbow"
                            android:layout_marginTop="20dp"
                            android:layout_gravity="center_horizontal"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/straight"
                            android:gravity="center"
                            android:textColor="#D4237A"
                            android:layout_marginTop="15dp"
                            android:textSize="16dp"/>
                </LinearLayout>

                <LinearLayout
                        android:id="@+id/linWeldOther"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:background="@color/holo_green_light"
                        android:orientation="vertical">

                    <ImageView
                            android:layout_width="85dp"
                            android:layout_height="85dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="20dp"
                            android:src="@drawable/ic_weldother" />

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:gravity="center"
                            android:text="@string/weld_other1"
                            android:textColor="#0061B2"
                            android:textSize="16dp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>